# apitap

./: .env   .env.example  .gitignore  Cargo.toml  Cargo_for_size_optimized.toml  PROFILE_README.md  README.md  index.html
docs/: BOXSTREAM_GUIDE.md  BRANDING.md  README.md  RUST_STREAMS_GUIDE.md  landing-page.html
examples/config/: pipelines.yaml
examples/sql/: example.sql  github.sql  github_abdul.sql  github_abdul_apache.sql  github_abdul_risingwavelab.sql  github_supabase.sql
src/: lib.rs
src/cmd/: mod.rs
src/config/: mod.rs  templating.rs
src/errors/: mod.rs
src/http/: fetcher.rs
src/log/: mod.rs
src/pipeline/: run.rs  sink.rs
src/utils/: datafusion_ext.rs  execution.rs  http_retry.rs  mod.rs  schema.rs  streaming.rs  template.rs
src/writer/: mod.rs
tests/config/: templating_tests.rs
tests/utils/: custom_macro_tests.rs  mod.rs
