[package]
name = "apitap"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Abdul Haris Djafar"]
description = "High-performance HTTP-to-warehouse ETL engine powered by Apache DataFusion & Rust"
repository = "https://github.com/abduldjafar/apitap"
homepage = "https://github.com/abduldjafar/apitap"
documentation = "https://docs.rs/apitap"
license = "MIT"
keywords = ["etl", "datafusion", "http", "warehouse", "pipeline"]
categories = ["database", "web-programming::http-client", "development-tools"]
readme = "README.md"


[dependencies]
datafusion = "47.0.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3"
url = "2.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json","blocking","stream"] } # For making HTTP requests and handling JSON
anyhow = "1.0.93"
serde_yaml = "0.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
tracing = "0.1.40"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
async-stream = "0.3"
tempfile = "3"
base64 = "0.22.1"
tokio-stream = "0.1"
serde_arrow = { version = "0.13.3", features = ["arrow-55"] }
dotenvy = "0.15"
tokio-util = "0.7.16"
minijinja = {version="2.12.0",features = ["json", "custom_syntax","loader"] }
walkdir = "2.5.0"
clap = { version = "4", features = ["derive"] }
tracing-error = "0.2.1"
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.2"
http = "1.3.1"
nanoid = "0.4"
regex = "1.12.2"
tokio-cron-scheduler = "0.15.1"
